--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Update Filter Lists
+name: Delete Filter Lists
 
 on:
   schedule:
@@ -25,12 +25,6 @@ jobs:
     - name: Install npm dependencies
       run: npm ci
 
-    - name: Download recommended whitelist
-      run: bash ./get_recommended_whitelist.sh
-
-    - name: Download recommended filters
-      run: bash ./get_recommended_filters.sh
-
     - name: Delete old rules and lists
       run: |
         node cf_gateway_rule_delete.js
@@ -41,15 +35,3 @@ jobs:
         CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
         CLOUDFLARE_LIST_ITEM_LIMIT: ${{ secrets.CLOUDFLARE_LIST_ITEM_LIMIT }}
 
-    - name: Create new rules and lists
-      run: |
-        node cf_list_create.js
-        node cf_gateway_rule_create.js
-      env:
-        CLOUDFLARE_API_KEY: ${{ secrets.CLOUDFLARE_API_KEY }}
-        CLOUDFLARE_ACCOUNT_EMAIL: ${{ secrets.CLOUDFLARE_ACCOUNT_EMAIL }}
-        CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-        CLOUDFLARE_LIST_ITEM_LIMIT: ${{ secrets.CLOUDFLARE_LIST_ITEM_LIMIT }}
-
-    - name: Keep alive
-      uses: gautamkrishnar/keepalive-workflow@v1
